# file_system

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  main.cpp
include/: directory.h  disk.h  fileop.h  fs.h  inode.h  inode_manager.h
src/: directory.cpp  disk.cpp  fileop.cpp  fs.cpp  inode.cpp  inode_manager.cpp  main.cpp
test/: test_directory.cpp  test_disk.cpp  test_fs.cpp  test_inode.cpp
